<resources>
    <string name="app_name">Playlist Maker</string>
    <string name="question" translatable="false">Вопрос:</string>
    <string name="_2_10">2/10</string>
    <string name="_9" translatable="false">Рейтинг этого фильма больше, чем 9?:</string>
    <string name="No" translatable="false">Нет</string>
    <string name="Yes" translatable="false">Да</string>
    <string name="playlist_maker">Playlist Maker</string>
    <string name="search_button_text">Поиск</string>
    <string name="media">Медиатека</string>
    <string name="Settings">Настройки</string>
    <string name="Dark_theme">Темная тема</string>
    <string name="Share_the_app">Поделиться приложением</string>
    <string name="Share">Поделиться</string>
    <string name="write_to_the_support">Написать в поддержку</string>
    <string name="User_agreement">Пользовательское соглашение</string>
    <string name="app_share_message">https://practicum.yandex.ru/catalog/programming/?from=main_header-programming_button</string>
    <string name="email_recipient">alexeychistyakoм@yandex.ru</string>
    <string name="email_subject">Сообщение разработчикам и разработчицам приложения Playlist Maker</string>
    <string name="email_body">Спасибо разработчикам и разработчицам за крутое приложение!</string>
    <string name="user_agreement_url">https://yandex.ru/legal/practicum_offer/</string>
    <string name="search">Поиск</string>
    <string name="search_hint">поиск</string>
    <string name="nothing_found">Ничего не нашлось</string>
    <string name="connection_error">Проблемы со связью\nЗагрузка не удалась. Проверьте подключение к интернету</string>
    <string name="refresh">Обновить</string>
    <string name="search_history">Вы искали</string>
    <string name="clear_history">Очистить историю</string>
    <string name="album_format">Альбом: %s</string>
    <string name="year_format">Год: %s</string>
    <string name="genre_format">Жанр: %s</string>
    <string name="country_format">Страна: %s</string>
    <string name="duration_format">%d:%02d</string>
    <string name="duration">Длительность</string>
    <string name="Album">Альбом</string>
    <string name="Year">Год</string>
    <string name="Genre">Жанр</string>
    <string name="Country">Страна</string>
    <string name="favorite_tracks">Избранные треки</string>
    <string name="playlists">Плейлисты</string>
    <string name="MediaLibrary">Медиатека</string>
    <string name="new_playlist">Новый плейлист</string>
    <string name="no_playlist">Вы не создали\nни одного плейлиста</string>
    <string name="your_library_is_empty">Ваша медиатека пуста</string>
    <string name="create_button">Создать</string>
    <string name="description_text">Описание</string>
    <string name="name_text">Название*</string>
    <string name="add_to_palylist">Добавить в плейлист</string>
    <string name="playlist_tracks">Треки</string>
    <string name="playlist_empty">В плейлисте нет треков</string>
    <string name="edit_info">Редактировать информацию</string>
    <string name="delete_playlist">Удалить плейлист</string>
    <string name="tracks_template_nbr">98 треков</string>
    <string name="best_songs_2021">Best songs 2021</string>
    <string name="_300_min_98_tracks">300 минут · 98 треков</string>

    <plurals name="tracks_count">
        <item quantity="one">%d трек</item>
        <item quantity="few">%d трека</item>
        <item quantity="many">%d треков</item>
        <item quantity="other">%d треков</item>
    </plurals>
</resources>