<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/my_primary"
    android:orientation="vertical"
    android:padding="@dimen/padding16">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/app_heading"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:fontFamily="@font/ys_text_medium"
            android:text="@string/playlist_maker"
            android:textColor="@color/white"
            android:textSize="@dimen/text_size_22" />
    </FrameLayout>

    <Button
        android:id="@+id/search_button"
        android:text="@string/search_button_text"
        style="@style/ButtonViewStyle"
        app:icon="@drawable/search_button" />

    <Button
        android:id="@+id/media_button"
        android:text="@string/media"
        style="@style/ButtonViewStyle"
        app:icon="@drawable/mediateka" />

    <Button
        android:id="@+id/settings_button"
        android:text="@string/Settings"
        style="@style/ButtonViewStyle"
        app:icon="@drawable/settings" />


</LinearLayout>

