<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/settings"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:backgroundTint="@color/white"
    android:orientation="vertical">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="4dp"
        android:paddingStart="4dp">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:gravity="center_vertical"
            android:layout_gravity="start|center_vertical">

            <ImageView
                android:layout_width="match_parent"
                android:id="@+id/button_back"
                android:paddingTop="16dp"
                android:layout_height="match_parent"
                android:src="@drawable/back_button"
                android:paddingStart="12dp"
                android:paddingEnd="12dp"
                android:layout_gravity="start|center_vertical"/>


            <TextView
                android:layout_width="wrap_content"
                android:textSize="@dimen/text_size_22"
                android:paddingTop="14dp"
                android:layout_height="match_parent"
                android:textColor="@color/black"
                android:text="@string/Settings"/>

        </LinearLayout>

    </FrameLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:id="@+id/theme"
        android:layout_height="64dp"
        android:paddingTop="24dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_vertical">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/Dark_theme"
                android:textColor="@color/black"
                android:paddingStart="@dimen/padding_settings"
                android:textSize="@dimen/text_size_settings"/>

            <Switch
                android:layout_width="wrap_content"
                android:id="@+id/switcher"
                android:layout_height="wrap_content"
                android:scrollbarSize="20dp"
                android:paddingEnd="18dp"
                tools:ignore="UseSwitchCompatOrMaterialXml" />

        </LinearLayout>
    </FrameLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="64dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/share_app"
            android:orientation="horizontal"
            android:gravity="center_vertical">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_gravity="center_vertical"
                android:paddingStart="@dimen/padding_settings"
                android:text="@string/Share_the_app"
                android:textColor="@color/black"
                android:textSize="16sp" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:paddingEnd="@dimen/padding_settings"
                android:src="@drawable/share_button" />

        </LinearLayout>

    </FrameLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="64dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:gravity="center_vertical">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_gravity="center_vertical"
                android:paddingStart="@dimen/padding_settings"
                android:text="@string/write_to_the_support"
                android:textColor="@color/black"
                android:textSize="@dimen/text_size_settings"/>

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:src="@drawable/support_logo"
                android:paddingEnd="@dimen/padding_settings"/>

        </LinearLayout>
    </FrameLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="64dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:gravity="center_vertical">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_gravity="center_vertical"
                android:paddingStart="@dimen/padding_settings"
                android:text="@string/User_agreement"
                android:textColor="@color/black"
                android:textSize="@dimen/text_size_settings"/>

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:src="@drawable/user_agreement"
                android:paddingEnd="@dimen/padding_settings"/>

        </LinearLayout>
    </FrameLayout>

</LinearLayout>